Scoreboard and TeamScore components

--- a/client/sass/bootstrap/bootstrap.scss
+++ b/client/sass/bootstrap/bootstrap.scss
@@ -11,12 +11,12 @@
 @import "mixins";
 
 // Reset and dependencies
-// @import "normalize";
-// @import "print";
+@import "normalize";
+@import "print";
 
 // Core CSS
-// @import "reboot";
-// @import "type";
+@import "reboot";
+@import "type";
 // @import "images";
 // @import "code";
 // @import "grid";
