CSS for Timeline

--- a/client/sass/index.scss
+++ b/client/sass/index.scss
@@ -1,3 +1,5 @@
 @import 'bootstrap/bootstrap';
 @import 'components/score-board';
 @import 'components/team-score';
+@import 'components/timeline';
+@import 'components/timeline-entry';
