--- a/client/sass/components/_timeline-entry.scss
+++ b/client/sass/components/_timeline-entry.scss
@@ -4,9 +4,9 @@
 
 .timeline-entry--node {
   display: flex;
-  width: 48px;
-  height: 48px;
-  transform: translateX(-24px);
+  width: 40px;
+  height: 40px;
+  transform: translateX(-20px);
   align-items: center;
   text-align: center;
   border: 2px $gray-light solid;
@@ -15,13 +15,14 @@
 }
 
 .timeline-entry--time {
+  font-size: $font-size-sm;
   width: 100%;
 }
 
 .timeline-entry--label {
   height: 32px;
   position: absolute;
-  top: 8px;
+  top: 4px;
   display: flex;
   align-items: center;
   z-index: -1;
