CSS Small fixes

--- a/client/sass/bootstrap/bootstrap.scss
+++ b/client/sass/bootstrap/bootstrap.scss
@@ -22,7 +22,7 @@
 // @import "grid";
 // @import "tables";
 // @import "forms";
-// @import "buttons";
+@import "buttons";
 
 // Components
 // @import "animation";
