--- a/client/sass/components/_editable-team-score.scss
+++ b/client/sass/components/_editable-team-score.scss
@@ -21,6 +21,9 @@
 
   &--control {
     flex: 1 1 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   &--button {
@@ -46,10 +49,13 @@
 
     &--team {
       flex: 1 1 auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     &--form {
-      width: 160px;
+      width: 120px;
     }
 
     &__visitor {
@@ -60,11 +66,6 @@
 
 @include media-breakpoint-up(md) {
   .editable-team-score {
-    &--team {
-      display: flex;
-      align-items: center;
-    }
-
     &__visitor .editable-team-score--team {
       flex-direction: row-reverse;
     }
@@ -72,6 +73,16 @@
     &--name {
       flex: 1 1 auto;
       font-size: $font-size-lg;
+    }
+
+    &--button {
+      width: 48px;
+      height: 48px;
+    }
+
+
+    &--points {
+      font-size: $font-size-xl;
     }
   }
 }
