Add "inverted" to EditableScoreboard component

--- a/client/sass/components/_score-board.scss
+++ b/client/sass/components/_score-board.scss
@@ -19,6 +19,10 @@
     border-bottom: 1px $gray-light solid;
   }
 
+  &--teams__inverted {
+    flex-direction: row-reverse;
+  }
+
   &--team {
     flex: 1;
   }
