Side invert button and CSS of RefereeRoot

--- a/client/sass/referee.scss
+++ b/client/sass/referee.scss
@@ -1,4 +1,5 @@
 @import 'bootstrap/bootstrap';
+@import 'components/referee-root';
 @import 'components/score-board';
 @import 'components/editable-team-score';
 @import 'components/timeline';
