--- a/client/sass/components/_timeline-entry.scss
+++ b/client/sass/components/_timeline-entry.scss
@@ -2,7 +2,7 @@
   position: relative;
 }
 
-.timeline-entry--node {
+.timeline-entry__node {
   display: flex;
   width: 40px;
   height: 40px;
@@ -12,37 +12,31 @@
   border: 2px $gray-light solid;
   border-radius: 50%;
   background: #FFF;
-}
-
-.timeline-entry--time {
   font-size: $font-size-sm;
-  width: 100%;
 }
 
-.timeline-entry--label {
+.timeline-entry__label {
   height: 32px;
   position: absolute;
   top: 4px;
   display: flex;
   align-items: center;
-
-  &__home {
-    right: 32px;
-    flex-direction: row;
-  }
-
-  &__away {
-    left: 32px;
-    flex-direction: row-reverse;
-  }
 }
 
+.timeline-entry__label--left {
+  right: 32px;
+  flex-direction: row;
+}
 
+.timeline-entry__label--right {
+  left: 32px;
+  flex-direction: row-reverse;
+}
 
-.timeline-entry--title {
+.timeline-entry__label__title {
   display: none;
 }
 
-.timeline-entry--points {
+.timeline-entry__label__points {
   width: 100%;
 }
