--- a/client/sass/components/_timeline-entry.scss
+++ b/client/sass/components/_timeline-entry.scss
@@ -1,35 +1,43 @@
 .timeline-entry {
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .timeline-entry__node {
-  display: flex;
+  margin: 8px 0;
+  padding: 4px 0;
   width: 40px;
-  height: 40px;
-  transform: translateX(-20px);
-  align-items: center;
+  height: 32px;
   text-align: center;
-  border: 2px $gray-light solid;
-  border-radius: 50%;
-  background: #FFF;
+  background: $gray-lighter;
   font-size: $font-size-sm;
+  color: $gray;
+}
+
+.timeline-entry__labels {
+  position: absolute;
+  width: 0px;
+  top: 0;
+  height: 48px;
 }
 
 .timeline-entry__label {
   height: 32px;
   position: absolute;
-  top: 4px;
+  top: 8px;
   display: flex;
   align-items: center;
 }
 
 .timeline-entry__label--left {
-  right: 32px;
+  right: 48px;
   flex-direction: row;
 }
 
 .timeline-entry__label--right {
-  left: 32px;
+  left: 48px;
   flex-direction: row-reverse;
 }
 
