Update Timeline and TimelineEntry components

--- a/client/sass/components/_timeline-entry.scss
+++ b/client/sass/components/_timeline-entry.scss
@@ -48,3 +48,9 @@
 .timeline-entry__label__points {
   width: 100%;
 }
+
+.timeline-entry__undo {
+  width: 32px;
+  height: 32px;
+  padding: 4px;
+}
