--- a/client/sass/components/_timeline.scss
+++ b/client/sass/components/_timeline.scss
@@ -1,6 +1,6 @@
 .timeline__list {
-  background: $gray-light;
-  width: 2px;
+  background: $gray-lighter;
+  width: 4px;
   margin: 0 auto;
   padding: 0;
   list-style: none;
@@ -8,4 +8,6 @@
 
 .timeline__item {
   padding: 16px 0;
+  width: 320px;
+  margin-left: -158px;
 }
