--- a/client/sass/components/_team-score.scss
+++ b/client/sass/components/_team-score.scss
@@ -1,74 +1,38 @@
 .team-score {
   text-align: center;
-
-  &--title {
-    display: none;
-  }
-
-  &--avatar {
-    width: 48px;
-    height: 48px;
-    display: flex;
-    align-items: center;
-    background: $brand-home-team;
-    color: $gray-lightest;
-    font-weight: bold;
-    font-size: $font-size-sm;
-
-    &__visitor {
-      background: $brand-away-team;
-    }
-  }
-
-  &--abbr {
-    flex: 1;
-    text-align: center;
-  }
-
-  &--name {
-    font-size: $font-size-base;
-    font-weight: bold;
-  }
-
-  &--points {
-    font-weight: bold;
-    font-size: $font-size-xl;
-  }
 }
 
-@include media-breakpoint-up(sm) {
-  //
-  .team-score {
-    display: flex;
-
-    &__visitor {
-      flex-direction: row-reverse;
-    }
-
-    &--team {
-      flex: 1 1 auto;
-    }
-
-    &--points {
-      width: 80px;
-    }
-  }
+.team-score__team-title {
+  display: none;
 }
 
-@include media-breakpoint-up(md) {
-  .team-score {
-    &--team {
-      display: flex;
-      align-items: center;
-    }
+.team-score__team-avatar {
+  width: 48px;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: $gray-lightest;
+  font-weight: bold;
+  font-size: $font-size-sm;
+  margin: auto;
+  border-radius: 50%;
+}
 
-    &__visitor .team-score--team {
-      flex-direction: row-reverse;
-    }
+.team-score__team-avatar--home {
+  background: $brand-home-team;
+}
 
-    &--name {
-      flex: 1 1 auto;
-      font-size: $font-size-lg;
-    }
-  }
+.team-score__team-avatar--away {
+  background: $brand-away-team;
+}
+
+.team-score__team-name {
+  font-size: $font-size-base;
+  font-weight: bold;
+}
+
+.team-score__points {
+  font-weight: bold;
+  font-size: $font-size-xl;
 }
