--- a/client/sass/index.scss
+++ b/client/sass/index.scss
@@ -1,5 +1,5 @@
 @import 'bootstrap/bootstrap';
-@import 'components/score-board';
+@import 'components/scoreboard';
 @import 'components/team-score';
 @import 'components/timeline';
 @import 'components/timeline-entry';
