--- a/client/sass/referee.scss
+++ b/client/sass/referee.scss
@@ -1,6 +1,6 @@
 @import 'bootstrap/bootstrap';
 @import 'components/referee-root';
 @import 'components/scoreboard';
-@import 'components/editable-team-score';
+@import 'components/team-score';
 @import 'components/timeline';
 @import 'components/timeline-entry';
